--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,7 @@
 }
 
 .dimmer {
+    display: none;
     position: absolute;
     z-index: 999;
     width: 100%;
@@ -42,6 +43,10 @@
     right: 0;
     background-color: rgba(0, 0, 0, 0.3);
     text-align: center;
+}
+
+.dimmer.show {
+    display: block;
 }
 
 .modal {
