--- a/app/globals.css
+++ b/app/globals.css
@@ -234,3 +234,29 @@ i {
 .according.show > .detail {
     display: block;
 }
+
+.form {
+    padding: .5rem;
+    text-align: left;
+}
+
+.form .field {
+    margin: .5rem;
+}
+
+.form .field > label {
+    display: inline-block;
+    width: 25%;
+    margin: 0 .5rem;
+}
+
+.form .field > input {
+    width: 60%;
+    margin: 0 .5rem;
+}
+
+.form .field > .error {
+    width: 60%;
+    margin: 0 .5rem;
+    margin-left: 32%;
+}
