--- a/app/globals.css
+++ b/app/globals.css
@@ -56,11 +56,11 @@ i {
 .modal {
     position: relative;
     display: inline-block;
-    top: 10%;
+    top: 20%;
     max-width: 80%;
-    min-width: 40%;
+    min-width: 30%;
     max-height: 80%;
-    min-height: 40%;
+    min-height: 30%;
     border: solid #33333333 1px;
     border-radius: .5rem;
     background: white;
@@ -77,10 +77,7 @@ i {
 }
 
 .modal > .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    display: block;
     box-shadow:0px -1px #33333333;
 }
 
