--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,14 @@ i {
     font-weight: bold;
 }
 
+.link {
+    color: blue;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
 .button {
     display: inline-block;
     padding: 0.5rem;
