--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,14 @@ i {
     text-decoration: none;
     font-style: normal;
 }
+
+input {
+    border: #00000066 solid 1px;
+    border-radius: .2rem;
+    padding: .2rem .5rem;
+    outline: none;
+}
+
 .center {
     text-align: center;
 }
@@ -71,9 +79,7 @@ i {
     display: inline-block;
     top: 20%;
     max-width: 80%;
-    min-width: 30%;
     max-height: 80%;
-    min-height: 30%;
     border: solid #33333333 1px;
     border-radius: .5rem;
     background: white;
@@ -261,7 +267,7 @@ i {
 
 .form .field > :nth-child(2) {
     width: 60%;
-    margin: 0 .5rem;
+    margin: 0;
 }
 
 .form .field > .error {
@@ -317,6 +323,7 @@ i {
 .dropdown > .list {
     position: absolute;
     display: none;
+    opacity: 0;
     color: white;
     margin: 0;
     padding: .3rem;
@@ -326,8 +333,24 @@ i {
 }
 
 .dropdown.show > .list {
+    transition: "opacity" 1s;
     display: block;
+    opacity: 100;
     z-index: 99;
+}
+
+.select {
+    border: #00000066 solid 1px;
+    border-radius: .2rem;
+}
+
+.select > input {
+    border: none;
+    outline: none;
+}
+
+.select > .icon {
+    vertical-align: bottom;
 }
 
 .table > table {
