--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,22 @@ i {
     font-style: normal;
 }
 
+body {
+    position: relative;
+    margin: 0;
+}
+
+.main {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
 input {
     border: #00000066 solid 1px;
     border-radius: .2rem;
@@ -58,7 +74,7 @@ input {
 
 .dimmer {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 999;
     width: 100%;
     height: 100%;
