--- a/app/globals.css
+++ b/app/globals.css
@@ -334,6 +334,13 @@ input {
 .dropdown {
     display: inline-block;
     position: relative;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.dropdown > :first-child {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .dropdown > .list {
@@ -346,6 +353,7 @@ input {
     background-color: #000000bb;
     border-radius: .2rem;
     overflow-y: visible;
+    white-space: nowrap;
 }
 
 .dropdown.show > .list {
@@ -356,17 +364,78 @@ input {
 }
 
 .select {
+    display: inline-block;
+    position: relative;
     border: #00000066 solid 1px;
     border-radius: .2rem;
 }
 
-.select > input {
+.select > .list {
+    position: absolute;
+    display: none;
+    opacity: 0;
+    margin: 0;
+    padding: .3rem;
+    background-color: #eeeeeeee;
+    border-radius: .2rem;
+    overflow-y: visible;
+    white-space: nowrap;
+}
+
+.select.show > .list {
+    transition: "opacity" 1s;
+    display: block;
+    min-width: 95%;
+    opacity: 100;
+    z-index: 99;
+}
+
+.select .header > input {
     border: none;
     outline: none;
 }
 
-.select > .icon {
+.select .header > .icon {
     vertical-align: bottom;
+}
+
+.select > .right.icon {
+    position: absolute;
+    display: inline-block;
+    top: 10%;
+    right: 3%;
+}
+
+.menu {
+    display: inline-block;
+    position: relative;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.menu > :first-child {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.menu > .list {
+    position: absolute;
+    display: none;
+    opacity: 0;
+    color: white;
+    margin: 0;
+    padding: .3rem;
+    background-color: #000000bb;
+    border-radius: .2rem;
+    overflow-y: visible;
+    white-space: nowrap;
+}
+
+.menu.show > .list {
+    transition: "opacity" 1s;
+    display: block;
+    opacity: 100;
+    z-index: 99;
 }
 
 .table > table {
