优化Slider组件：限制圆点拖动位置

--- a/app/globals.css
+++ b/app/globals.css
@@ -442,7 +442,7 @@ textarea:focus {
     background-color: dodgerblue;
 }
 
-.slider > .track.first {
+.slider > .track:first-child {
     position: absolute;
     top: 0;
     left: 0;
