重构：将单个页面拆分到用户、房间两个页面

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -34,6 +34,10 @@ input:focus {
     text-align: center;
 }
 
+.right {
+    text-align: right;
+}
+
 .round {
     border-radius: 5rem;
 }
@@ -44,11 +48,12 @@ input:focus {
 }
 
 .link {
-    color: blue;
+    color: gray;
+    text-decoration: none;
 }
 
 .link:hover {
-    text-decoration: underline;
+    color: blue;
 }
 
 .button {
