--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,11 @@
+@import url("../public/fonts/iconfont.css");
+
+a {
+    display: inline-block;
+    color: gray;
+    text-decoration: none;
+}
+
 i {
     text-decoration: none;
     font-style: normal;
@@ -19,6 +27,45 @@ body {
     overflow: auto;
 }
 
+.logo {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+a.logo {
+    color: initial;
+    text-decoration: none;
+}
+
+.logo > .iconfont {
+    margin-right: .5rem;
+}
+
+.logo > .title {
+    vertical-align: super;
+}
+
+.navbar {
+    position: relative;
+    padding: 0 1rem;
+    box-shadow: 0px 1px #33333333;
+}
+
+.navbar > * {
+    vertical-align: super;
+}
+
+.navbar > .left {
+    display: inline-block;
+    text-align: left;
+}
+
+.navbar > .right {
+    display: inline-block;
+    position: absolute;
+    right: 1rem;
+}
+
 input {
     border: #00000066 solid 1px;
     border-radius: .2rem;
@@ -28,6 +75,26 @@ input {
 
 input:focus {
     outline: solid 1px dodgerblue;
+}
+
+.blue {
+    color: dodgerblue;
+}
+
+.large {
+    font-size: 3rem;
+}
+
+.medium {
+    font-size: 2rem;
+}
+
+.small {
+    font-size: 1rem;
+}
+
+.tiny {
+    font-size: .5rem;
 }
 
 .center {
@@ -48,6 +115,7 @@ input:focus {
 }
 
 .link {
+    display: inline-block;
     color: gray;
     text-decoration: none;
 }
@@ -222,18 +290,18 @@ input:focus {
     display: inline-block;
 }
 
-.list.horizontal > .item:hover i {
+.tab > .header > .list > .item:hover i {
     opacity: 1;
 }
 
-.list.horizontal > .item i {
+.tab > .header > .list > .item i {
     opacity: 0;
     color: grey;
     cursor: pointer;
     margin-left: .5rem;
 }
 
-.list.horizontal > .item:hover i {
+.tab > .header > .list > .item:hover i {
     opacity: 1;
 }
 
@@ -268,7 +336,8 @@ input:focus {
 
 .according > .summary > .icon {
     position: absolute;
-    right: 1rem;
+    right: .5rem;
+    top: .6rem;
 }
 
 .according > .detail {
@@ -674,17 +743,31 @@ textarea:focus {
     margin-right: 0;
 }
 
+.menu > :first-child:hover {
+    background-color: #33333333;
+}
+
 .menu > .list {
     position: absolute;
     display: none;
     opacity: 0;
-    color: white;
     margin: 0;
-    padding: .3rem;
-    background-color: #000000bb;
+    padding: 0;
+    background-color: #eeeeeeee;
     border-radius: .2rem;
     overflow-y: visible;
     white-space: nowrap;
+    box-shadow: 0 0 4px 1px #33333333;
+}
+
+.menu > .list > .item {
+    margin: 0;
+    padding: .5rem;
+    border-radius: .2rem;
+}
+
+.menu > .list > .item > a {
+    color: inherit;
 }
 
 .menu.show > .list {
@@ -692,6 +775,11 @@ textarea:focus {
     display: block;
     opacity: 100;
     z-index: 99;
+}
+
+.menu.show > .list > .item:hover {
+    color: white !important;
+    background-color: rgb(136, 186, 255);
 }
 
 .fan {
@@ -775,19 +863,18 @@ textarea:focus {
     list-style: none;
     text-indent: 0;
     padding: .5rem;
+    margin: .5rem;
 }
 
 .breadcrumb > .item {
     display: inline-block;
     cursor: pointer;
     margin: 0;
-    margin-right: .5rem;
 }
 
 .breadcrumb > .item > .icon {
     color: grey;
     margin: 0;
-    margin-left: .5rem;
 }
 
 .pager .item {
