--- a/app/globals.css
+++ b/app/globals.css
@@ -143,7 +143,7 @@ input:focus {
 }
 
 .second.button {
-    background-color: deeppink;
+    background-color: teal;
     color: white;
 }
 
@@ -560,7 +560,7 @@ textarea:focus {
 }
 
 .popover {
-    display: block;
+    display: inline-block;
     position: relative;
 }
 
@@ -571,6 +571,22 @@ textarea:focus {
     box-shadow: 0 0 4px 1px #33333333;
     border-radius: .5rem;
     background-color: white;
+}
+
+.popover > .content.left {
+    right: -100%;
+}
+
+.popover > .content.right {
+    left: 100%;
+}
+
+.popover > .content.top {
+    bottom: 100%;
+}
+
+.popover > .content.bottom {
+    top: 100%;
 }
 
 .popover > .content > * {
