--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,11 @@ button {
     border: none;
 }
 
+button:disabled {
+    cursor: not-allowed!important;
+    background-color: gray!important;
+}
+
 body {
     position: relative;
     margin: 0;
@@ -210,6 +215,8 @@ input:focus {
     top: 10%;
     max-height: 80%;
     list-style: none;
+    z-index: 1000;
+    padding: 0;
 }
 
 .notification > .item {
@@ -217,27 +224,56 @@ input:focus {
     box-shadow: 0px 0px 2px 1px #33333333;
     margin: .5rem 0;
     padding: .5rem;
-    background-color: white;
+    position: relative;
+}
+
+.notification > .item > * {
+    vertical-align: middle;
 }
 
 .notification > .item > .icon {
-    color: gray;
+    border-radius: 5rem;
+}
+
+.notification > .item > .text {
+    color: #000000bb;
+    padding: 0 .5rem;
+}
+
+.notification > .item > .action {
+    position: absolute;
+    top: 35%;
+    right: 2%;
     cursor: pointer;
     display: inline-block;
-    position: absolute;
-    right: 2%;
+    color: #eeeeeeee;
 }
 
 .info {
-    color: deepskyblue
+    background-color: deepskyblue
+}
+
+.info > .icon {
+    color: dodgerblue;
+    background: radial-gradient(white 50%, transparent 50%);
 }
 
 .warn {
+    background-color: rgb(240, 200, 125);
+}
+
+.warn > .icon {
     color: orange;
+    background: radial-gradient(white 50%, transparent 50%);
 }
 
 .error {
+    background-color: rgb(242, 142, 142);
+}
+
+.error > .icon {
     color: red;
+    background: radial-gradient(white 50%, transparent 50%);
 }
 
 .tab {
@@ -573,22 +609,6 @@ textarea:focus {
     background-color: white;
 }
 
-.popover > .content.left {
-    right: -100%;
-}
-
-.popover > .content.right {
-    left: 100%;
-}
-
-.popover > .content.top {
-    bottom: 100%;
-}
-
-.popover > .content.bottom {
-    top: 100%;
-}
-
 .popover > .content > * {
     margin: 0;
     max-width: 100%;
@@ -600,23 +620,23 @@ textarea:focus {
 }
 
 .popover > .content.left {
-    top: 25%;
-    left: -75%;
+    top: 0;
+    right: 0%;
 }
 
 .popover > .content.right {
-    top: 25%;
-    right: -75%;
+    top: 0;
+    left: 100%;
 }
 
 .popover > .content.top {
-    top: -50%;
-    left: 10%;
+    bottom: 0;
+    left: 50%;
 }
 
 .popover > .content.bottom {
-    bottom: -50%;
-    left: 10%;
+    top: 100%;
+    left: 50%;
 }
 
 .dialog {
